recovery ranking lereader

--- a/owllook/templates/md/index.html
+++ b/owllook/templates/md/index.html
@@ -49,9 +49,9 @@
 
 <div class="mdui-container">
     <div class="mdui-typo" style="margin-top: 3%">
-        <!-- <div class="mdui-chip">
-            <a href="/md"><span class="rank-list mdui-chip-title">owllook</span></a>
-        </div> -->
+        <div class="mdui-chip">
+            <a href="/md"><span class="rank-list mdui-chip-title">lereader</span></a>
+        </div>
         <div class="mdui-chip">
             <a href="/md/qidian"><span class="rank-list mdui-chip-title">起点小说榜单</span></a>
         </div>
